--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "element": "^0.1.4",
     "element-ui": "^2.15.3",
     "vue": "^2.5.2",
